Added CycleBases for ThermodynamicCycle and base cycle types. Added testimonials to the home page.

--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/Testimonials.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/Testimonials.html
@@ -1,2 +1,15 @@
-<div class="document">
+<div class="document" id="testimonials">
+<h1 class="title">Testimonials</h1>
+<div class="line-block">
+<div class="line"><br /></div>
+<div class="line"><br /></div>
+</div>
+<p>SysMo have helped us analyze the complex behavior of our hydrogen storage system, allowing us to optimize it to meet the demands of our customers. I would like to highlight the quick and focused work of Mr. Pavlov and his team. Using the models developed by them, we are able to simulate the behavior of the hydrogen storage system under all operating conditions. I will be glad to work with SysMo again in the future.</p>
+<p><em>Klaus Szoucsek, Hydrogen Storage Development, BMW AG, Germany</em></p>
+<div class="line-block">
+<div class="line"><br /></div>
+<div class="line"><br /></div>
+</div>
+<p>In my work, I have to deal with complex computational models. The software developed by the SysMo team has allowed me to structure my work, and not have to do repetitive tasks by hand. Now I can develop quicker simulation models, and they come automatically with interfaces to certain major simulation platforms and languages: FMI, Modelica, AMESim, Simulink.</p>
+<p><em>Cedric Roman, NumenGo, France</em></p>
 </div>
