--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/FluidPropertiesDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/FluidPropertiesDoc.html
@@ -46,9 +46,6 @@ v = q \cdot v_v + (1 - q) \cdot v_l
 <p>In order to obtain the boiling temperature at a given pressure, the user enters the pressure and an arbitrary
 value in the range 0-1 for <em>q</em>.</p>
 </div>
-<div class="section" id="equations-of-state">
-<h2>1.3.&nbsp;&nbsp;&nbsp;Equations of state</h2>
-</div>
 </div>
 <div class="section" id="coolprop-package">
 <h1>2.&nbsp;&nbsp;&nbsp;CoolProp package</h1>
@@ -67,6 +64,8 @@ for properties under ceratain conditions (e.g. at a low temperature). Thus, bett
 <h2>3.1.&nbsp;&nbsp;&nbsp;P-H diagram</h2>
 <div class="section" id="isentrops">
 <h3>3.1.1.&nbsp;&nbsp;&nbsp;Isentrops</h3>
+<p>A special algorithm was developed for tracing isentrops, so that most calculations can be expressed in terms
+of the fundamental variables of the equation of state: temperature and density.</p>
 <ol class="arabic simple">
 <li>Start from a seed poing <span class="math">\(f_0\)</span></li>
 <li>Compute the fluid state based on <span class="math">\(s\)</span> and <span class="math">\(T\)</span> variables</li>
