Fixed many things about HeatPump and HeatEngine cycles
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/Services.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/Services.html
@@ -19,7 +19,7 @@
 <p>We can model complex circuits in the thermal, fluid, mechanical, electrical and other domains.
 These simulations are typically transient, showing the development of various system variables over time.
 The CO2 heat pump shown here, for example, consists of a compressor, condenser, expansion valve, evaportor
-and recurperator (counterflow heat exchanger). The different componnents are laid out graphically
+and recuperator (counterflow heat exchanger). The different componnents are laid out graphically
 and are interconnected. After the simulation run, some results are shown on the graph. In this case we
 were interested in the temperatures at the different parts of the system.</p>
 <table border="1" class="align-center subfigures docutils">
