--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/HeatEngineCyclesDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/HeatEngineCyclesDoc.html
@@ -50,7 +50,7 @@ being pumped again.</li>
 <img alt="/static/ThermoFluids/img/ModuleImages/RankineCycle.png" src="/static/ThermoFluids/img/ModuleImages/RankineCycle.png" style="width: 500px;" />
 <p class="caption">Regenerative Rankine cycle</p>
 </div>
-<p>In this variation of the Rankine cycle, a counterflow heat exchanger (recurperator) is placed between:</p>
+<p>In this variation of the Rankine cycle, a counterflow heat exchanger (recuperator) is placed between:</p>
 <ul class="simple">
 <li>the pump and the boiler on one hand</li>
 <li>the turbine and the condenser on the other hand</li>
