--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/HeatPumpCyclesDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/HeatPumpCyclesDoc.html
@@ -36,14 +36,14 @@ mixture. The colder the temperature of the fluid before the valve, the more the 
 environment</li>
 </ol>
 </div>
-<div class="section" id="vapor-compression-cycle-with-recurperator">
-<h1>Vapor compression cycle with recurperator</h1>
+<div class="section" id="vapor-compression-cycle-with-recuperator">
+<h1>Vapor compression cycle with recuperator</h1>
 <div class="figure align-center">
 <img src="/static/ThermoFluids/img/ModuleImages/VaporCompressionCycle.svg" style="width: 500px;">
 </img>
-<p class="caption">Vapor compression cycle with recurperator</p>
+<p class="caption">Vapor compression cycle with recuperator</p>
 </div>
-<p>In this variation of the vapor compression cycle, a recurperator (counterflow heat exchanger) is placed
+<p>In this variation of the vapor compression cycle, a recuperator (counterflow heat exchanger) is placed
 between:</p>
 <ul class="simple">
 <li>the otlet of the evaporator and the inlet of the compressor, on one hand,</li>
