Implemented ports, and in particular ThermodynamicPorts for ThermodynamicCycles
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/HeatEngineCyclesDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/HeatEngineCyclesDoc.html
@@ -26,8 +26,7 @@ cycle design is, is the <em>second law</em> efficiency:</p>
 <div class="section" id="rankine-cycle">
 <h1>Rankine cycle</h1>
 <div class="figure align-center">
-<img src="/static/ThermoFluids/img/ModuleImages/RankineCycle.svg" style="width: 500px;">
-</img>
+<img alt="/static/ThermoFluids/img/ModuleImages/RankineCycle.png" src="/static/ThermoFluids/img/ModuleImages/RankineCycle.png" style="height: 400px;" />
 <p class="caption">Rankine cycle</p>
 </div>
 <p>Rankine cycle is used to produce power in virtually all coal power plants and other plants using
@@ -48,7 +47,8 @@ being pumped again.</li>
 <div class="section" id="regenerative-rankine-cycle">
 <h1>Regenerative Rankine cycle</h1>
 <div class="figure align-center">
-<img alt="/static/ThermoFluids/img/ModuleImages/RankineCycle_Recuperator.png" src="/static/ThermoFluids/img/ModuleImages/RankineCycle_Recuperator.png" style="width: 500px;" />
+<img src="/static/ThermoFluids/img/ModuleImages/RankineCycle_Recuperator.svg" style="height: 400px;">
+</img>
 <p class="caption">Regenerative Rankine cycle</p>
 </div>
 <p>In this variation of the Rankine cycle, a counterflow heat exchanger (recuperator) is placed between:</p>
