Added isothermal efficiency to the Compressor model. Some other little tweaks.
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/LiquefactionCyclesDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/LiquefactionCyclesDoc.html
@@ -10,6 +10,10 @@
 </div>
 <div class="section" id="claude-cycle">
 <h1>Claude cycle</h1>
-<p>TBD</p>
+<div class="figure align-center">
+<img src="/static/ThermoFluids/img/ModuleImages/ClaudeCycle.svg" style="width: 500px;">
+</img>
+<p class="caption">Claude cycle</p>
+</div>
 </div>
 </div>
