--- a/BioReactors/templates/BioReactors/restblocks/html/ChemostatSimpleDoc.html
+++ b/BioReactors/templates/BioReactors/restblocks/html/ChemostatSimpleDoc.html
@@ -2,7 +2,7 @@
 <h1 class="title">Simple Chemostat</h1>
 <div class="figure align-center">
 <img alt="/static/BioReactors/img/ModuleImages/SimpleChemostat.png" src="/static/BioReactors/img/ModuleImages/SimpleChemostat.png" style="width: 150px;" />
-<p class="caption">Stirred bioreactor operated as a chemostat, with a continuous inflow (the feed) and outflow (the effluent).
+<p class="caption">Stirred bioreactor operated as a chemostat, with continuous inflow (the feed) and outflow (the effluent).
 The rate of medium flow is controlled to keep the culture volume constant.</p>
 </div>
 <div class="section" id="chemostat">
@@ -24,8 +24,13 @@ S' = (S_{in} - S)D - \frac{1}{\gamma}\mu(S)X
 X' = (X_{in} - X)D + \mu(S)X
 \end{equation*}
 </div>
+<div class="line-block">
+<div class="line"><br /></div>
+</div>
 <p>where:</p>
-<blockquote>
+<div class="line-block">
+<div class="line"><br /></div>
+</div>
 <p><span class="math">\(S(t)\)</span> - the substrate concentration [conc.]</p>
 <p><span class="math">\(X(t)\)</span> - the microorganisms concentration [conc.]</p>
 <p><span class="math">\(S_{in}\)</span> - the input substrate concentration [conc.]</p>
@@ -35,12 +40,15 @@ X' = (X_{in} - X)D + \mu(S)X
 <p><span class="math">\(\mu(S) = \frac{m.S}{K+S}\)</span> - the specific growth rate (Monod type) [conc./time]</p>
 <p><span class="math">\(m\)</span> - the maximum specific growth rate of the microorganisms [1/time]</p>
 <p><span class="math">\(K\)</span> - the half saturation constant [conc.]</p>
-</blockquote>
+<div class="line-block">
+<div class="line"><br /></div>
+</div>
 <p>and</p>
-<blockquote>
+<div class="line-block">
+<div class="line"><br /></div>
+</div>
 <p><span class="math">\(S'=\frac{dS(t)}{dt}\)</span> - the rate of change of the substrate concentration [conc./time]</p>
 <p><span class="math">\(X'=\frac{dX(t)}{dt}\)</span> - the rate of change of the microorganisms concentration [conc./time]</p>
-</blockquote>
 <p>In simple words, the above ordinary differential equations say:</p>
 <div class="math">
 \begin{equation*}
