--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/HeatEngineCyclesDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/HeatEngineCyclesDoc.html
@@ -9,7 +9,7 @@ measured as the fraction of the heat coming from the hot reservoir converted to 
 \eta = \frac{W}{Q_H}
 \end{equation*}
 </div>
-<p>If the hot and cold reservoir have a well defined temperature, then the maximum efficiency that
+<p>If the hot and cold reservoirs have well-defined temperatures, then the maximum efficiency that
 can be achieved is given by Carnot's efficiency:</p>
 <div class="math">
 \begin{equation*}
@@ -33,13 +33,13 @@ cycle design is, is the <em>second law</em> efficiency:</p>
 steam turbines to power generators. It consists of four steps:</p>
 <ol class="arabic simple">
 <li>The cold liquid water is pumped to high pressure using a liquid pump. Because liquids are nearly
-incompressible the work required for the pumping is rather small</li>
-<li>The water enters a boiler where it is heated (by burning coal etc.). The water evaporates and the
-steam is typically superheated (both processes at constant pressure) so that the steam is well away
+incompressible, the work required for the pumping is rather small</li>
+<li>The water enters a boiler where it is heated (by burning coal, etc.). The water evaporates and the
+steam is typically superheated (both processes occuring at constant pressure) so that the steam is well away
 from the two-phase region (dry steam)</li>
 <li>The hot, high-pressure steam is expanded through a turbine, isentropically (in an ideal cycle),
 and part of the steam enthalpy is converted to work. At the outlet, wet steam (two-phase
-mixture, mostly steam) at low pressure exits the turbine</li>
+mixture, mostly steam) at low pressure exits the turbine.</li>
 <li>The wet steam enters the condenser, gives off heat to the environment and is reliquefied before
 being pumped again.</li>
 </ol>
@@ -53,8 +53,8 @@ being pumped again.</li>
 </div>
 <p>In this variation of the Rankine cycle, a counterflow heat exchanger (recuperator) is placed between:</p>
 <ul class="simple">
-<li>the pump and the boiler on one hand</li>
-<li>the turbine and the condenser on the other hand</li>
+<li>the pump and the boiler, on one hand,</li>
+<li>the turbine and the condenser, on the other hand</li>
 </ul>
 <p>The steam exiting the turbine is still rather hot. Some of its enthalpy can be used to pre-heat the water
 entering the boiler, before it is wasted by rejecting it to the surroundings. This reduces the amount of
