--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/HeatPumpCyclesDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/HeatPumpCyclesDoc.html
@@ -46,12 +46,12 @@ environment.</li>
 <p>In this variation of the vapor compression cycle, a recuperator (counterflow heat exchanger) is placed
 between:</p>
 <ul class="simple">
-<li>the otlet of the evaporator and the inlet of the compressor, on one hand,</li>
-<li>the outlet of the condenser and the inlet of the throttle valve, on the other hand.</li>
+<li>the outlet of the evaporator and the inlet of the compressor, on one hand,</li>
+<li>the outlet of the condenser and the inlet of the throttle valve, on the other hand</li>
 </ul>
 <p>The cold vapors coming from the evaporator, which still have some
 cooling capacity, absorb heat from the still warm liquid leaving the condensor. The subcooling of the liquid
-before the throttle valve, shifts the two-phase mixture entering the evaporator to the liquid side, and thus
+before the throttle valve shifts the two-phase mixture entering the evaporator to the liquid side, and thus
 provides extra cooling capacity. The temperature at the outlet of the compressor also increases, resulting
 in more heat rejected at the condensor.</p>
 </div>
