--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/LiquefactionCyclesDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/LiquefactionCyclesDoc.html
@@ -11,7 +11,7 @@
 cycle consists of the following steps:</p>
 <ul class="simple">
 <li>compression: the gas is compressed to a rather high pressure (200-300 bar). The compressor
-used is typically a multistage compressor with inter-cooling between the stages to approximate
+used is typically a multistage one with inter-cooling between the stages to approximate
 iso-thermal compression</li>
 <li>cooling: the fluid is cooled down to temperatures close to the liquefaction temperatures using
 a recurperator</li>
@@ -31,8 +31,13 @@ until the cold side is already cold.</li>
 </div>
 <div class="section" id="claude-cycle">
 <h1>Claude cycle</h1>
+<div class="figure align-center">
+<img src="/static/ThermoFluids/img/ModuleImages/ClaudeCycle.svg" style="width: 500px;">
+</img>
+<p class="caption">Claude cycle</p>
+</div>
 <p>Claude cycle is a variation of the Linde-Hampson cycle, where an expander and two additional
-recurperators are added to the circuit. The expander extracts additional enthalpy from the fluid,
+recurperators are added to the circuit <a class="citation-reference" href="#refrigerationuspas" id="id1">[RefrigerationUSPAS]</a>. The expander extracts additional enthalpy from the fluid,
 thus reducing the temperature and increasing the liquid yield. The downside is the increased complexity
 of the circuit and especially the design of a low-temperature expander.</p>
 <p>The Claude cycle has 2 variations:</p>
@@ -45,10 +50,15 @@ of the circuit and especially the design of a low-temperature expander.</p>
 <li><a class="reference external" href="http://ethesis.nitrkl.ac.in/1466/1/PROCESS_DESIGN.pdf" target="_self">Choudhury, B. K., Process Design of Turboexpander-based Nitrogen Liquefier</a>, p. 27</li>
 <li><a class="reference external" href="http://direns.mines-paristech.fr/Sites/Thopt/en/co/cryogenie.html" target="_self">Cryogenic cycles</a>, Claude cycle</li>
 </ul>
-<div class="figure align-center">
-<img src="/static/ThermoFluids/img/ModuleImages/ClaudeCycle.svg" style="width: 500px;">
-</img>
-<p class="caption">Claude cycle</p>
+<p>gdfgdf</p>
 </div>
+<div class="section" id="references">
+<h1>References</h1>
+<table class="docutils citation" frame="void" id="refrigerationuspas" rules="none">
+<colgroup><col class="label" /><col /></colgroup>
+<tbody valign="top">
+<tr><td class="label"><a class="fn-backref" href="#id1">[RefrigerationUSPAS]</a></td><td><a class="reference external" href="http://uspas.fnal.gov/materials/10MIT/Lecture_2.1.pdf" target="_self">http://uspas.fnal.gov/materials/10MIT/Lecture_2.1.pdf</a></td></tr>
+</tbody>
+</table>
 </div>
 </div>
