--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/LiquefactionCyclesDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/LiquefactionCyclesDoc.html
@@ -19,13 +19,13 @@ a recurperator</li>
 forms and the liquid is separated from the vapor by allowing it to settle at the bottom of a
 reservoir</li>
 <li>gas return: the vapor fraction is returned to the compressor, passing through the recurperator,
-where it is warmed up and in the same time cools down the incoming flow from the compressor.</li>
+where it is warmed up and at the same time cools down the incoming flow from the compressor.</li>
 </ul>
 <p>The Linde cycle has the advantage of simplicity, but it has 3 main problems:</p>
 <ul class="simple">
-<li>requires compressor for very high pressure</li>
+<li>requires a compresssor for very high pressures</li>
 <li>very low yield: the liquid generated is only a small percent of the flow</li>
-<li>initial cool-down: the cycle cannot operate (at least not effciently)
+<li>initial cool-down: the cycle cannot operate (at least not efficiently)
 until the cold side is already cold.</li>
 </ul>
 </div>
@@ -36,21 +36,20 @@ until the cold side is already cold.</li>
 </img>
 <p class="caption">Claude cycle</p>
 </div>
-<p>Claude cycle is a variation of the Linde-Hampson cycle, where an expander and two additional
-recurperators are added to the circuit <a class="citation-reference" href="#refrigerationuspas" id="id1">[RefrigerationUSPAS]</a>. The expander extracts additional enthalpy from the fluid,
+<p>Calude cycle is built on top of the Linde-Hampson cycle, by adding an expander and two additional
+recurperators to the circuit <a class="citation-reference" href="#refrigerationuspas" id="id1">[RefrigerationUSPAS]</a>. The expander extracts additional enthalpy from the fluid,
 thus reducing the temperature and increasing the liquid yield. The downside is the increased complexity
 of the circuit and especially the design of a low-temperature expander.</p>
-<p>The Claude cycle has 2 variations:</p>
+<p>The Claude cycle has two variations:</p>
 <ul class="simple">
-<li>Kapitza cycle, which uses low pressures and cryogenic expander, eliminating the last recurperator</li>
-<li>Heylandt cycle, which uses high pressures and room-temperature expander, eliminating the first recurperator</li>
+<li>Kapitza cycle, which uses low pressures and a cryogenic expander, eliminating the last recurperator</li>
+<li>Heylandt cycle, which uses high pressures and a room-temperature expander, eliminating the first recurperator</li>
 </ul>
 <p>Two examples of Kapitza cycles for Nitrogen with different pressure levels are implemented as examples, the data taken from:</p>
 <ul class="simple">
 <li><a class="reference external" href="http://ethesis.nitrkl.ac.in/1466/1/PROCESS_DESIGN.pdf" target="_self">Choudhury, B. K., Process Design of Turboexpander-based Nitrogen Liquefier</a>, p. 27</li>
 <li><a class="reference external" href="http://direns.mines-paristech.fr/Sites/Thopt/en/co/cryogenie.html" target="_self">Cryogenic cycles</a>, Claude cycle</li>
 </ul>
-<p>gdfgdf</p>
 </div>
 <div class="section" id="references">
 <h1>References</h1>
